fix: permit any vercel subdomain and localhost origins via CORS patterns